# CovOpt-Analyzer

./: .covopt.toml  .gitignore  Cargo.toml  LICENSE  README.md  audit.md  local_ci.sh
.agents/: AGENTS.md
.agents/rules/: covopt-rules.md
.github/workflows/: ci.yml
covopt-macro/: Cargo.toml  README.md
covopt-macro/src/: lib.rs
covopt_cli/: Cargo.toml  README.md
covopt_cli/src/: auto_fixer.rs  ci.rs  commands.rs  explore.rs  main.rs
covopt_core/: Cargo.toml
covopt_core/src/: advisor.rs  config.rs  dataflow.rs  dummy_heuristics.rs  entropy.rs  heuristic.rs  lib.rs  mca.rs  optimizer.rs  runner.rs  sandbox.rs  static_analysis.rs
src/: advisor.rs  analysis.rs  analyzer.rs  asm_extractor.rs  audit.rs  auto_harness.rs  auto_refactor.rs  auto_simd.rs  cache.rs  ci.rs  commands.rs  config.rs  coverage.rs  dashboard.rs  dataflow.rs  dummy_heuristics.rs  entropy.rs  explore.rs  harden.rs  heuristic.rs  lib.rs  main.rs  mca.rs  optimizer.rs  parameter_optimizer.rs  pgo_injector.rs  profiler.rs  runner.rs  scanner.rs  static_analysis.rs  struct_layout.rs
src/fuzz/fuzz_targets/: auto_target_1.rs  auto_target_10.rs  auto_target_11.rs  auto_target_12.rs  auto_target_13.rs  auto_target_14.rs  auto_target_15.rs  auto_target_16.rs  auto_target_17.rs  auto_target_2.rs  auto_target_3.rs  auto_target_4.rs  auto_target_5.rs  auto_target_6.rs  auto_target_7.rs  auto_target_8.rs  auto_target_9.rs
tests/: covopt_explore_harness.rs  dummy_test.rs  no_macro_test.rs  ruinsos_scheduler.rs  spin_deadlock.rs  uaf_thread_exit.rs
