[package]
name = "CovOpt-Analyzer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "covopt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
tempfile = "3.17.1"
rustc-demangle = "0.1.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
