[package]
name = "covopt-macro"
version = "2.0.0-alpha.1"
edition = "2024"
description = "Lightweight parameter tuning and complexity testing macros for CovOpt-Analyzer"
license = "MIT"
repository = "https://github.com/hianova/CovOpt-Analyzer"
homepage = "https://github.com/hianova/CovOpt-Analyzer"
readme = "README.md"
keywords = ["performance", "macro", "tuning", "optimization", "complexity"]
categories = ["development-tools::profiling", "no-std"]
authors = ["hianova <hianova@github.com>"]
exclude = [".covopt/", ".covopt_backup/", "scratch/"]

[lib]
proc-macro = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
syn = { version = "3.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
