[package]
name = "covopt_cli"
version = "2.0.0-alpha.1"
edition = "2024"
description = "Command-line interface for CovOpt-Analyzer: automated time/space complexity auditing and AI agent auto-tuning."
license = "MIT"
repository = "https://github.com/hianova/CovOpt-Analyzer"
homepage = "https://github.com/hianova/CovOpt-Analyzer"
readme = "README.md"
keywords = ["performance", "cli", "profiling", "optimization", "complexity"]
categories = ["command-line-utilities", "development-tools::profiling"]
authors = ["hianova <hianova@github.com>"]
exclude = [".covopt/", ".covopt_backup/", "scratch/"]

[[bin]]
name = "covopt"
path = "src/main.rs"

[[bin]]
name = "cargo-covopt"
path = "src/bin/cargo_covopt.rs"

[dependencies]
covopt_core = { version = "2.0.0-alpha.1", path = "../covopt_core" }
covopt-macro = { version = "2.0.0-alpha.1", path = "../covopt-macro" }
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = "1.1.2"
anyhow = "1.0.104"
syn = { version = "3.0", features = ["full", "extra-traits", "visit", "visit-mut"] }
tempfile = "3.17.1"
rustc-demangle = "0.1.24"
quote = "1.0"
regex = "1.10.0"
walkdir = "2.5.0"
